2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsalloc.hpp:
	  Fixed crash in allocation of no-aggregates that have their address taken.

2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsalloc.hpp,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Reorganized code for stack allocation.

2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/z80.h:
	  Fixed bug in full tree-decomposition-based spilllocation allocation.

2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Full tree-decomposition-based spilllocation allocation.

2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Preparations for full tree-decomposition-based spilllocation allocation.

2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCbtree.cc,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/ralloc.c,
	  src/z80/gen.
	  Chaitin-style spilllocation allocation and simplified tree-decomposition-based spilllocation allocation usable for the first time.

2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCmem.h,
	  src/SDCCralloc.hpp:
	  Preparations for tree-decomposition-based spilllocation allocation and Chaitin-style spilllocation allocation.

2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/main.c:
	  Preparations for handling variables that had their address taken in tree-decomposition-based spilllocation allocation and Chaitin-style spilllocation allocation.

2011-09-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge from trunk.

2011-09-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/sincoshf.c: fixed bug 3326853
